--- a/static/css/tickles-main.css
+++ b/static/css/tickles-main.css
@@ -1,4 +1,123 @@
+html,
 body {
-    background-color: skyblue;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    transition: 2s;
+}
+
+/* body {
+    border: 0.3px solid rgba(0, 0, 0, 0.3);
+} */
+
+* {
+    font-family: Roboto;
+    font-size: small
+}
+
+.preloader {
+    height: 100%;
+    width: 100%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.spinner {
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+}
+
+.spinner>div {
+    background-color: rgb(30, 163, 112);
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+    0%,
+    40%,
+    100% {
+        -webkit-transform: scaleY(0.4)
+    }
+    20% {
+        -webkit-transform: scaleY(1.0)
+    }
+}
+
+@keyframes sk-stretchdelay {
+    0%,
+    40%,
+    100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
+    }
+    20% {
+        transform: scaleY(1.0);
+        -webkit-transform: scaleY(1.0);
+    }
+}
+
+.ad-container {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: .2px solid rgba(36, 37, 37, 0.589)
+}
+
+.close,
+.help {
+    width: 14px;
+    height: 14px;
+    color: white;
+    border-radius: 48%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 3px;
+    cursor: pointer;
+}
+
+.close {
+    right: 2px;
+    background-color: rgba(6, 68, 65, 0.589);
+}
+
+.help {
+    background-color: rgba(17, 19, 19, 0.589);
+    right: 19px;
 }
